# Trace

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  trace_textview_override_test
.content-admin/backups/website-20260317-095004/: README.md  changelog.html  download.html  index.html  resources.html  roadmap.html  site.css  styles.css
.content-admin/backups/website-20260317-095004/blog/: harness-engineering-ai-moat-2026.html  index.html
.content-admin/backups/website-20260317-095004/downloads/: README.md
.content-admin/backups/website-20260317-220251/: blog.html  pricing.html  privacy.html  release.js  site.css  site.js  terms.html
.content-admin/backups/website-20260317-220251/blog/: harness-engineering-ai-moat-2026.html
.content-admin/backups/website-20260317-220334/: index.html  product.html  readme.html  release-data.js  site.css
.content-admin/backups/website-20260317-220334/blog/: harness-engineering-ai-moat-2026.html
.content-admin/preview-build/: index.html  resources.html
.content-admin/preview-build/blog/: index.html
.github/workflows/: trace-windows-build.yml  trace-windows-release.yml  windows-build.yml
Sources/Trace/App/: AppDelegate.swift
Sources/Trace/Models/: NoteSection.swift  ThreadConfig.swift
Sources/Trace/Services/: AppSettings.swift  ClipboardImageWriter.swift  DailyNoteWriter.swift  ThreadWriter.swift
Sources/Trace/UI/Capture/: CapturePanelController.swift  CaptureTextEditor.swift  CaptureView.swift  CaptureViewModel.swift
Sources/Trace/UI/Settings/: SettingsView.swift  ThreadConfigRow.swift
Sources/Trace/Utils/: AppResourceBundle.swift  BrandAssets.swift  KeyboardShortcut.swift  L10n.swift  Notification+Trace.swift  TraceTheme.swift
Tests/TraceTests/: CapturePanelControllerTests.swift  DailyNoteWriterTests.swift  KeyboardShortcutTests.swift  SectionTitleSettingsTests.swift
clients/trace-win/: Cargo.toml  README.md
clients/trace-win/src/: main.rs  model.rs  settings.rs  writer.rs
clients/trace-windows/: Cargo.toml  README.md  rust-toolchain.toml
clients/trace-windows/.cargo/: config.toml
clients/trace-windows/crates/trace-app/: Cargo.toml
clients/trace-windows/crates/trace-app/src/: main.rs
clients/trace-windows/crates/trace-core/: Cargo.toml
clients/trace-windows/crates/trace-core/src/: error.rs  l10n.rs  lib.rs  settings.rs  theme.rs
clients/trace-windows/crates/trace-core/src/models/: daily_file_date_format.rs  entry.rs  entry_theme.rs  language.rs  mod.rs  panel_frame.rs  section.rs  separator.rs  shortcut_spec.rs  theme_preset.rs  thread_config.rs  write_mode.rs
clients/trace-windows/crates/trace-core/src/paths/: date_format.rs  mod.rs  normalize.rs  safety.rs
clients/trace-windows/crates/trace-core/src/writer/: atomic.rs  clipboard_image.rs  daily.rs  file.rs  mod.rs  thread.rs
clients/trace-windows/crates/trace-core/tests/: glyph_uniqueness.rs
clients/trace-windows/crates/trace-platform/: Cargo.toml
clients/trace-windows/crates/trace-platform/src/: app_paths.rs  autostart.rs  clipboard_image.rs  global_hotkey.rs  lib.rs  single_instance.rs  system_tray.rs  vault_validation.rs  window.rs
clients/trace-windows/crates/trace-ui/: Cargo.toml
clients/trace-windows/crates/trace-ui/src/: app.rs  clipboard.rs  fonts.rs  lib.rs  platform.rs  theme.rs
clients/trace-windows/crates/trace-ui/src/settings/: autostart.rs  mod.rs  quick_sections.rs  shortcut_event.rs  shortcuts.rs  storage.rs  system.rs  threads.rs  tiles.rs  widgets.rs
clients/trace-windows/crates/trace-ui/src/widgets/: editor.rs  footer.rs  header.rs  mod.rs  toast.rs
clients/trace-windows/crates/trace-ui/tests/: capture_flow.rs
clients/trace-windows/installer/: .gitignore  README.md  build-msi.ps1
clients/trace-windows/installer/assets/: LICENSE.rtf
clients/trace-windows/installer/scripts/: build-ico.py  build-license-rtf.py
clients/trace-windows/installer/wix/: Bundle.wxs  Product.wxs
cms/: __init__.py  app.py  config.py  content.py  models.py  publisher.py  renderer.py  requirements.txt
cms/static/: admin.css
cms/templates/admin/: base.html  content_form.html  content_list.html  dashboard.html  featured.html  login.html
cms/templates/public/: base.html  blog_index.html  blog_post.html  home.html  resources.html
cms/tests/: test_admin.py
content/blog/: harness-engineering-ai-moat-2026.md
content/config/: homepage.yaml
deploy/nginx/: sotasync-admin.conf
deploy/systemd/: sotasync-admin.service
docs/: content-admin.md  markdown-native-card-note-example.md
docs/plans/: 2026-02-27-flashnote-mvp-design.md  2026-02-28-website-launch-playbook.md  2026-02-28-website-win-rollout-plan.md  2026-02-28-windows-mvp-delivery.md  2026-03-02-capture-append-undo-and-publish-flow-design.md  2026-03-07-release-ui-and-mode-toggle-design.md  2026-04-09-thread-mode.md  2026-04-22-phase-14-wix-msi-installer.md  2026-04-22-phase-15-signing-release.md  2026-04-23-phase-16-exe-bundle.md  2026-04-23-phase-17-trim-release.md
scripts/: build-content-site.sh  generate-app-icon.swift  package-downloads.sh  publish-content-site.sh  run-admin.sh  serve-website.sh  trace.sh
website/: README.md  changelog.html  download.html  pricing.html  privacy.html  product.html  release-data.js  roadmap.html  site.css  site.js  terms.html
website/blog/: harness-engineering-ai-moat-2026.html  index.html
website/downloads/: README.md  Trace.dmg
