[workspace]
resolver = "2"
members = [
    "crates/trace-core",
    "crates/trace-platform",
    "crates/trace-ui",
    "crates/trace-app",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/SamSong1997/Trace"
authors = ["Sam Song <samsong199705@gmail.com>"]

[workspace.dependencies]
# Cross-platform domain dependencies (used by trace-core)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# UI dependencies
# `tokio` enables `iced::time::every` for the toast auto-dismiss subscription.
iced = { version = "~0.14", features = ["tokio"] }
# `rfd` provides native folder/file dialogs used by the settings window's
# vault / inbox Browse buttons. The `tokio` feature pairs with iced's async
# runtime so `pick_folder().await` can be awaited from inside an
# `iced::Task::perform`.
#
# Linux 不是支持目标;只保留 tokio feature 让 macOS (AppKit) 和 Windows (COM)
# 开箱即用,避免 xdg-portal 拖入 D-Bus/ashpd 依赖膨胀 Windows 二进制。
rfd = { version = "0.15", default-features = false, features = ["tokio"] }

# Structured logging for the settings window's write-through persistence path.
# Consumed by `trace-ui::settings::persist_working` to surface disk-write
# failures without panicking or interrupting the UI.
tracing = "0.1"
# Subscriber that actually surfaces the `tracing::warn!` calls in startup
# code paths (settings persistence, autostart). Kept minimal — `fmt` +
# `env-filter` — so the dev-console output honours `RUST_LOG` without
# pulling in JSON / OpenTelemetry features. Consumed only by `trace-app`.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Windows platform dependencies
windows = "0.58"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
