[package]
name = "trace-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows-only system integration for the Trace client (global hotkeys, tray, autostart)."

[dependencies]
trace-core = { path = "../trace-core" }
# `uuid` seeds unique probe-file names inside `vault_validation` so a
# parallel writeability check cannot race another probe on the same
# directory.
uuid = { workspace = true }

# `windows` is only declared on Windows targets so the workspace remains
# buildable on macOS/Linux developer machines (the crate body stays empty on
# non-Windows targets via `#[cfg(windows)]`).
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
