[package]
name = "trace-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iced-based UI layer for the Trace Windows client."

[dependencies]
trace-core = { path = "../trace-core" }
iced = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Native folder picker for the Storage card's Browse buttons. Driven via
# `iced::Task::perform` so the picker runs outside the iced view thread.
rfd = { workspace = true }

[dev-dependencies]
tempfile = "3"
