[package]
name = "trace-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iced-based UI layer for the Trace Windows client."

[dependencies]
trace-core = { path = "../trace-core" }
# `trace-platform` provides the filesystem-backed vault-path validation used
# by the Storage card. The crate compiles to a near-empty shell on non-Windows
# hosts (see `trace-platform/src/lib.rs`) so pulling it into `trace-ui` keeps
# the workspace buildable on macOS/Linux developer machines while giving the
# Windows build the same write-probe / is-directory checks the Mac reference
# runs inside its settings view.
trace-platform = { path = "../trace-platform" }
iced = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Native folder picker for the Storage card's Browse buttons. Driven via
# `iced::Task::perform` so the picker runs outside the iced view thread.
rfd = { workspace = true }
# Structured logging for the settings window's write-through persistence path.
# Used by `settings::persist_working` to surface disk-write failures without
# panicking or interrupting the UI — mirrors Mac `AppSettings.updateLaunchAtLogin`'s
# `NSLog(...)` fallback for the same class of errors.
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
